5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1636_2724.log
== TEST (2019-04-08 14:29:22) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a>b and a<c):
	meio=a
if(b>a and b<c):
	meio=b
if(c>a and c<b):
	meio=c
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:30:08) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a>b and a<c):
	meio=a
	print(meio)
if(b>a and b<c):
	meio=b
	print(meio)
if(c>a and c<b):
	meio=c
	print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:31:53) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a>b and a<c):
	meio=a
if(b>a and b<c):
	meio=b
if(c>a and c<b):
	meio=c
print(meio)
-- EXECUTION TIME:
0.13979
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 10, in <module>
    print(meio)
NameError: name 'meio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:31:56) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a>b and a<c):
	meio=a
if(b>a and b<c):
	meio=b
if(c>a and c<b):
	meio=c
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:51) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a<b):
	meio=a
if(a>b and a<c):
	meio=a
if(b<c and b<a):
	meio=b
if(b>a and b<c):
	meio=b
if(c<b and c>a):
	meio=c
if(c>a and c<b):
	meio=c
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:49) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a<b):
	meio=a
if(a>b and a<c):
	meio=a
if(b<c and b<a):
	meio=b
if(b>a and b<c):
	meio=b
if(c<b and c>a):
	meio=c
if(c>a and c<b):
	meio=c
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:18) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a<b):
	meio=a
if(a>b and a<c):
	meio=a
if(b<c and b<a):
	meio=b
if(b>a and b<c):
	meio=b
if(c<b and c>a):
	meio=c
if(c>a and c<b):
	meio=c
print(meio)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(meio)
NameError: name 'meio' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:05:21) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a<b):
	meio=a
if(a>b and a<c):
	meio=a
if(b<c and b<a):
	meio=b
if(b>a and b<c):
	meio=b
if(c<b and c>a):
	meio=c
if(c>a and c<b):
	meio=c
print(meio)
-- EXECUTION TIME:
0.161401
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 16, in <module>
    print(meio)
NameError: name 'meio' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:42) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a<b):
	m=a
if(a>b and a<c):
	m=a
if(b<c and b<a):
	m=b
if(b>a and b<c):
	m=b
if(c<b and c>a):
	m=c
if(c>a and c<b):
	m=c
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:06:52) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a>b):
	M = a
if(a>b and a<c):
	M = a
if(b<c and b>a):
	M = b
if(b>a and b<c):
	M = b
if(c<b and c>a):
	M = c
if(c>a and c<b):
	M = c
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(m)
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:21:29) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a>b):
	M = a
if(a>b and a<c):
	M = a
if(b<c and b>a):
	M = b
if(b>a and b<c):
	M = b
if(c<b and c>a):
	M = c
if(c>a and c<b):
	M = c
print(M)
-- EXECUTION TIME:
0.164468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1636/2724/main.py", line 16, in <module>
    print(M)
NameError: name 'M' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:21:32) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a>b):
	M = a
if(a>b and a<c):
	M = a
if(b<c and b>a):
	M = b
if(b>a and b<c):
	M = b
if(c<b and c>a):
	M = c
if(c>a and c<b):
	M = c
print(M)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(M)
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:10) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a>b):
	M = a
if(a>c and a<b):
	M = a
if(b<c and b>a):
	M = b
if(b>c and b<a):
	M = b
if(c<b and c>a):
	M = c
if(c>b and c<a):
	M = c
print(M)
-- OUTPUT:
258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:25:21) 
-- CODE:
a=int(input("numero1:"))
b=int(input("numero2:"))
c=int(input("numero3:"))
if(a<c and a>b):
	M = a
if(a>c and a<b):
	M = a
if(b<c and b>a):
	M = b
if(b>c and b<a):
	M = b
if(c<b and c>a):
	M = c
if(c>b and c<a):
	M = c
print(M)
-- EXECUTION TIME:
0.173497
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
258
---- user output:
258
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
77
---- user output:
77
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
456
---- user output:
456
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
